src/test/deca/context/valid/sansObjet/UseOfPrintlnx.deca
{
    int x = 2020;
    printlnx(x);
}