src/test/deca/context/invalid/sansObjet/NoDeclarationOfVariable1.deca
{
    floater = 2020.2f;
}